[tool.poetry]
name = "xpemlflow1212"
version = "0.1.0"
description = "mlops"
authors = [
    "Marcos Prochnow <marcosprochnow@gmail.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.124.4,<0.125.0"
pydantic = ">=2.12.5,<3.0.0"
seaborn = ">=0.13.2,<0.14.0"
scikit-learn = ">=1.8.0,<2.0.0"
numpy = ">=2.3.5,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
uvicorn = ">=0.38.0,<0.39.0"
mlflow = ">=3.7.0,<4.0.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"